# Pointer

./: .gitignore  LICENSE  README.md  binding.gyp  deps.gypi  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  user.json
scripts/: proto_gen.sh
src/backend/: CMakeLists.txt  README.en.md  README.zh.md  deps.cmake
src/backend/src/file_handler/: file_handler.cc  file_handler.h  file_handler_test.cc
src/backend/src/path_handler/: path_handler.cc  path_handler.h
src/backend/src/plugin/: plugin.cc
src/backend/src/proto_gen/: README.md
src/backend/src/utils/: utils.cc  utils.h
src/backend_test/file_handler/: CMakeLists.txt  README.en.md  README.zh.md  deps.cmake
src/backend_test/file_handler/src/: file_handler.cc  file_handler.h  file_handler_test.cc
src/main/: index.ts
src/preload/: index.d.ts  index.ts
src/proto/: file_handler.proto  utils.proto
src/renderer/: index.html
src/renderer/src/: App.tsx  i18n.ts  main.tsx
src/renderer/src/assets/: base.css  main.css
src/renderer/src/components/: CodeEditorWrapper.tsx  EditorWrapper.tsx  MarkdownEditor.tsx  NoteRendererWrapper.tsx  SidePane.tsx  TitleBar.tsx  ToolBar.tsx  Versions.tsx
src/renderer/src/context/: WorkspaceBridge.tsx
src/renderer/src/locales/: en.json  translations.ts  zh.json
src/renderer/src/pages/: ErrNoWorkspaceOpened.tsx  MyLibrary.tsx
src/shared/: BackendPromise.ts  DirectoryNode.d.ts  FolderPath.ts  WindowCommandType.ts
